* QuickTemplate::msgHtml() and BaseTemplate::msgHtml() have been deprecated
  as they promote bad practises. I18n messages should always be properly
  escaped.
* Skin::getDynamicStylesheetQuery() has been deprecated. It always
  returns action=raw&ctype=text/css which callers should use directly.
* Class LegacyFormatter is deprecated.

=== Other changes in 1.32 ===
* (T198811) The following tables have had their UNIQUE indexes turned into
  proper PRIMARY KEYs for increased maintainability: interwiki, page_props,
  protected_titles and site_identifiers.
* OOUI HTMLForm will now display help text inline after the input field,
  rather than in a popup. Previous behavior can be restored by using
  `'help-inline' => false`.
* The archive table's ar_rev_id field is now unique.
* Special:BotPasswords now requires reauthentication.
* (T174023) Multi-Content Revision (MCR) capabilities were introduced into the
  storage layer and have basic support for display. No user interface exists
  yet for creating or managing content in slots beides the main slot. See
  <https://www.mediawiki.org/wiki/Multi-Content_Revisions> for more
  information.
* …

== Compatibility ==
MediaWiki 1.32 requires PHP 7.0.0 or later. Although HHVM 3.18.5 or later is
supported, it is generally advised to use PHP 7.0.0 or later for long term
support.

MySQL/MariaDB is the recommended DBMS. PostgreSQL or SQLite can also be used,
but support for them is somewhat less mature. There is experimental support for
Oracle and Microsoft SQL Server.

The supported versions are:

* MySQL 5.5.8 or later
* PostgreSQL 9.2 or later
* SQLite 3.3.7 or later
* Oracle 9.0.1 or later
* Microsoft SQL Server 2005 (9.00.1399)

== Upgrading ==
1.32 has several database changes since 1.31, and will not work without schema
updates. Note that due to changes to some very large tables like the revision
table, the schema update may take quite long (minutes on a medium sized site,
many hours on a large site).
